CKA-md/Script/daemonsets-demo.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: beebox-cleanup
spec:
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels: 
        app: my-app
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.1
        command: ["sh","-c", "while true; do rm -rm /beebox-temp/*; sleep 60 ; done"]
        volumeMounts:
        - name: beebox-temp
          mountPath: /beebox-temp

      volumes:
      - name: beebox-temp
        hostPath:
          path: /etc/beebox/tmp
