CKA-md/Script/demo-chapter5.3.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
spec:
  containers:
  - name: nginx
    image: nginx:1.19.1
    ports:
    - containerPort: 80
    volumeMounts:
    - name: config-volume
      mountPath: /etc/nginx
    - name: secret-volume
      mountPath: /etc/nginx/conf

  volumes: 
  - name: config-volume
    configMap:
      name: nginx-config
  - name: secret-volume
    secret:
      secretName: nginx-htpasswd
