CKA-md/Script/env-var.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
  - app: nginx
spec:
  containers:
  - ...
