CKA-md/Script/init-container.yml
apiVersion: v1
kind: Pod
metadata: init-pod
spec:
  containers:
  - name: main-container
    image: nginx:1.19.1
