CKA-md/Script/liveness-probes.yml
apiVersion: v1
kind: Pod
metadata: liveness-pod
spec:
  restartPolicy: Never
  containers:
  - name: nginx-pod
    image: nginx:1.19.1
    #command: ["sh", "-c", "while true, do sleep 3600, done"]
    livenessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 5
