CKA-md/Script/node-name.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
  - name: nginx
    image: nginx.1.19.1
  nodeName: workerNode1
