CKA-md/Script/node-selector.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
  - name: my-nginx
    image: nginx.1.19.1
  nodeSelector:
    mylabel: myvalue
