CKA-md/Script/resource-request.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
  - name: busybox
    image: busybox
    resources:
      requests:
        cpu: "250m"
        memory: "128Mi"
      limits:
        cpu: 500m
        memory: 254Mi
