CKA-md/Script/startup-probes.yml
apiVersion: v1
kind: Pod
metadata: startup-probe-pod
spec:
  restartPolicy: Always
  containers:
  - name: nginx-pod
    image: nginx:1.19.1
    startupProbe:
      httpGet:
        path: /
        port: 80
      failureThreshold: 30
      periodSeconds: 10
