CKA-md/Script/using-envFrom.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-envPod
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sh","-c","echo: configmap: $CONFIGMAPVAR; secret: $SECRETVAR"]
