CKA-md/Script/using-evn-volumes.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod-vol
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sh", "-c", "while true; do sleep 3600; done "]
    volumeMounts:
    - name: configmap-vol
      mountPath: /etc/config/configmap
    - name: secret-vol
      mountPath: /etc/config/secret
  
  volumes:
  - name: configmap-vol
    configMap:
      name: my-configmap
  - name: secret-vol
    secret:
      secretName: my-secret
