CKA-md/Script/network-polic-handsonLab.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-network-policy
  namespace: my-np
  lables:
    app: nginx
spec:
  podSeclector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from: 
    - nameSpaceSelector:
      matchLabels:
        team: my-np
    ports:
    - protocol: TCP
      port: 80
